--- a/app.css
+++ b/app.css
@@ -106,3 +106,11 @@ md-content {
     color: rgba(0, 0, 0, 0.87);
     background-color: rgb(255, 255, 255);
 }
+
+#gui {}
+
+.dg.main {}
+
+.dg.a {
+    margin-right: 60px !important;
+}
