--- a/app.css
+++ b/app.css
@@ -114,3 +114,27 @@ md-content {
 .dg.a {
     margin-right: 60px !important;
 }
+
+.doc-demo-content {
+    padding: 0;
+}
+
+docs-demo .doc-demo-content {
+    margin: 16px;
+}
+
+.site-content-toolbar {
+    background: #f6f6f6 !important;
+    color: #666 !important;
+    z-index: 3;
+}
+
+.site-content-toolbar {
+    background: #f6f6f6 !important;
+    color: #202020 !important;
+    z-index: 3;
+}
+
+.md-whiteframe-glow-z1 {
+    box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 0px 2px 2px rgba(0, 0, 0, 0.098), 0px 0px 5px 1px rgba(0, 0, 0, 0.084);
+}
